--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,6 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
+    compile group: 'net.objecthunter' , name: 'exp4j', version: '0.4.7'
     testCompile 'junit:junit:4.12'
 }
