--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.androidplot:androidplot-core:1.2.2'
     compile 'com.android.support:design:24.2.1'
     compile group: 'net.objecthunter' , name: 'exp4j', version: '0.4.7'
     testCompile 'junit:junit:4.12'
