YOU'RE IN THE JUNGLE BABY, YOU'RE GONA DIEEEEEEEEEEEEEEE

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,7 +64,9 @@
         <activity
             android:name=".SistemasDeEcuaciones"
             android:label="@string/title_activity_sistemas_de_ecuaciones"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".MatrizResult" />
+        <activity android:name=".FactorResult"></activity>
     </application>
 
 </manifest>
